course course detail information doucment responsive design success

--- a/contact.html
+++ b/contact.html
@@ -221,7 +221,7 @@
   
       // Marker example
       L.marker([12.834254009551909, 100.98152917052228]).addTo(map)
-        .bindPopup('PDRC')
+        .bindPopup('PDRC PATTAYA Drone and Robotics Center')
         .openPopup();
     </script>
     <script src="/js/script.js"></script>
