--- a/course.html
+++ b/course.html
@@ -35,16 +35,16 @@
                                        <a href="course.html" class="active"> <img src="/images/reactangle.png" alt="rectangle" width="10" class="rectangle__image"> กลุ่ม ผู้เริ่มต้น (Beginner)</a>
                                     </li>
                                     <li class="dropdown-link">
-                                        <a href="#professional" onclick="myFunction(event, this)"> <img src="/images/reactangle.png" alt="rectangle" width="10" class="rectangle__image"> กลุ่ม นักบินโดรน เพื่องานถ่ายภาพและวิดีโอ ระดับมืออาชีพ (Professional)</a>
+                                        <a href="#professional"> <img src="/images/reactangle.png" alt="rectangle" width="10" class="rectangle__image"> กลุ่ม นักบินโดรน เพื่องานถ่ายภาพและวิดีโอ ระดับมืออาชีพ (Professional)</a>
                                     </li>
                                     <li class="dropdown-link">
-                                        <a href="#specialist" onclick="myFunction(event, this)"><img src="/images/reactangle.png" alt="rectangle" width="10" class="rectangle__image"> กลุ่ม นักบินโดรน วิชาชีพเฉพาะทาง (Specialist)</a>
+                                        <a href="#specialist"><img src="/images/reactangle.png" alt="rectangle" width="10" class="rectangle__image"> กลุ่ม นักบินโดรน วิชาชีพเฉพาะทาง (Specialist)</a>
                                     </li>
                                     <li class="dropdown-link">
-                                        <a href="#license" onclick="myFunction(event, this)"><img src="/images/reactangle.png" alt="rectangle" width="10" class="rectangle__image"> กลุ่ม นักบินโดรน รับรองใบอนุญาตตามกฎหมาย (License)</a>
+                                        <a href="#license"><img src="/images/reactangle.png" alt="rectangle" width="10" class="rectangle__image"> กลุ่ม นักบินโดรน รับรองใบอนุญาตตามกฎหมาย (License)</a>
                                     </li>
                                     <li class="dropdown-link">
-                                        <a href="#cert" onclick="myFunction(event, this)"><img src="/images/reactangle.png" alt="rectangle" width="10" class="rectangle__image"> กลุ่ม ผู้ตรวจสอบ (Certificate)</a>
+                                        <a href="#cert"><img src="/images/reactangle.png" alt="rectangle" width="10" class="rectangle__image"> กลุ่ม ผู้ตรวจสอบ (Certificate)</a>
                                     </li>
                                 </ul>
                             </div>
@@ -113,7 +113,7 @@
                     <img src="/images/drone_beginner.png" alt="drone_beginner" width="100%">
                     <p class="course__text">หลักสูตร นักบินโดรน ขั้นพื้นฐาน (Drone for Beginners)</p>
                     <div class="bottom__line"></div>
-                    <div class="d-flex gap-2">
+                    <div class="d-flex">
                         <div class="flex__price__button">
                             <div class="price__button">
                                 5,500.-
@@ -121,12 +121,12 @@
                         </div>
                         <div class="flex__course__detail__button">
                             <div class="course__detail__button">
-                               <a href="course_detail.html">course detail</a> 
+                               <a href="course_detail.html">รายละเอียดคอร์ส</a> 
                             </div>
                         </div>
                         <div class="flex__register__button">
                             <div class="register__button">
-                                <a href="#">register</a>
+                                <a href="#">ลงทะเบียนคอร์สนี้</a>
                             </div>
                         </div>
                     </div>
@@ -137,7 +137,7 @@
                     <img src="/images/drone_beginner.png" alt="drone_beginner" width="100%">
                     <p class="course__text">หลักสูตร นักบินโดรน FPV ขั้นพื้นฐาน (FPV Drone for Beginners)</p>
                     <div class="bottom__line"></div>
-                    <div class="d-flex gap-2">
+                    <div class="d-flex">
                         <div class="flex__price__button">
                             <div class="price__button">
                                 25,000.-
@@ -145,12 +145,12 @@
                         </div>
                         <div class="flex__course__detail__button">
                             <div class="course__detail__button">
-                               <a href="#">course detail</a> 
+                               <a href="#">รายละเอียดคอร์ส</a> 
                             </div>
                         </div>
                         <div class="flex__register__button">
                             <div class="register__button">
-                                <a href="#">register</a>
+                                <a href="#">ลงทะเบียนคอร์สนี้</a>
                             </div>
                         </div>
                     </div>
@@ -170,12 +170,12 @@
                         </div>
                         <div class="flex__course__detail__button">
                             <div class="course__detail__button">
-                               <a href="#">course detail</a> 
+                               <a href="#">รายละเอียดคอร์ส</a> 
                             </div>
                         </div>
                         <div class="flex__register__button">
                             <div class="register__button">
-                                <a href="#">register</a>
+                                <a href="#">ลงทะเบียนคอร์สนี้</a>
                             </div>
                         </div>
                     </div>
@@ -195,12 +195,12 @@
                         </div>
                         <div class="flex__course__detail__button">
                             <div class="course__detail__button">
-                               <a href="#">course detail</a> 
+                               <a href="#">รายละเอียดคอร์ส</a> 
                             </div>
                         </div>
                         <div class="flex__register__button">
                             <div class="register__button">
-                                <a href="#">register</a>
+                                <a href="#">ลงทะเบียนคอร์สนี้</a>
                             </div>
                         </div>
                     </div>
@@ -220,12 +220,12 @@
                         </div>
                         <div class="flex__course__detail__button">
                             <div class="course__detail__button">
-                               <a href="#">course detail</a> 
+                               <a href="#">รายละเอียดคอร์ส</a> 
                             </div>
                         </div>
                         <div class="flex__register__button">
                             <div class="register__button">
-                                <a href="#">register</a>
+                                <a href="#">ลงทะเบียนคอร์สนี้</a>
                             </div>
                         </div>
                     </div>
@@ -252,12 +252,12 @@
                         </div>
                         <div class="flex__course__detail__button">
                             <div class="course__detail__button">
-                               <a href="#">course detail</a> 
+                               <a href="#">รายละเอียดคอร์ส</a> 
                             </div>
                         </div>
                         <div class="flex__register__button">
                             <div class="register__button">
-                                <a href="#">register</a>
+                                <a href="#">ลงทะเบียนคอร์สนี้</a>
                             </div>
                         </div>
                     </div>
@@ -276,12 +276,12 @@
                         </div>
                         <div class="flex__course__detail__button">
                             <div class="course__detail__button">
-                               <a href="#">course detail</a> 
+                               <a href="#">รายละเอียดคอร์ส</a> 
                             </div>
                         </div>
                         <div class="flex__register__button">
                             <div class="register__button">
-                                <a href="#">register</a>
+                                <a href="#">ลงทะเบียนคอร์สนี้</a>
                             </div>
                         </div>
                     </div>
@@ -308,12 +308,12 @@
                         </div>
                         <div class="flex__course__detail__button">
                             <div class="course__detail__button">
-                               <a href="#">course detail</a> 
+                               <a href="#">รายละเอียดคอร์ส</a> 
                             </div>
                         </div>
                         <div class="flex__register__button">
                             <div class="register__button">
-                                <a href="#">register</a>
+                                <a href="#">ลงทะเบียนคอร์สนี้</a>
                             </div>
                         </div>
                     </div>
@@ -332,12 +332,12 @@
                         </div>
                         <div class="flex__course__detail__button">
                             <div class="course__detail__button">
-                               <a href="#">course detail</a> 
+                               <a href="#">รายละเอียดคอร์ส</a> 
                             </div>
                         </div>
                         <div class="flex__register__button">
                             <div class="register__button">
-                                <a href="#">register</a>
+                                <a href="#">ลงทะเบียนคอร์สนี้</a>
                             </div>
                         </div>
                     </div>
@@ -357,12 +357,12 @@
                         </div>
                         <div class="flex__course__detail__button">
                             <div class="course__detail__button">
-                               <a href="#">course detail</a> 
+                               <a href="#">รายละเอียดคอร์ส</a> 
                             </div>
                         </div>
                         <div class="flex__register__button">
                             <div class="register__button">
-                                <a href="#">register</a>
+                                <a href="#">ลงทะเบียนคอร์สนี้</a>
                             </div>
                         </div>
                     </div>
@@ -382,12 +382,12 @@
                         </div>
                         <div class="flex__course__detail__button">
                             <div class="course__detail__button">
-                               <a href="#">course detail</a> 
+                               <a href="#">รายละเอียดคอร์ส</a> 
                             </div>
                         </div>
                         <div class="flex__register__button">
                             <div class="register__button">
-                                <a href="#">register</a>
+                                <a href="#">ลงทะเบียนคอร์สนี้</a>
                             </div>
                         </div>
                     </div>
@@ -406,12 +406,12 @@
                         </div>
                         <div class="flex__course__detail__button">
                             <div class="course__detail__button">
-                               <a href="#">course detail</a> 
+                               <a href="#">รายละเอียดคอร์ส</a> 
                             </div>
                         </div>
                         <div class="flex__register__button">
                             <div class="register__button">
-                                <a href="#">register</a>
+                                <a href="#">ลงทะเบียนคอร์สนี้</a>
                             </div>
                         </div>
                     </div>
@@ -431,12 +431,12 @@
                         </div>
                         <div class="flex__course__detail__button">
                             <div class="course__detail__button">
-                               <a href="#">course detail</a> 
+                               <a href="#">รายละเอียดคอร์ส</a> 
                             </div>
                         </div>
                         <div class="flex__register__button">
                             <div class="register__button">
-                                <a href="#">register</a>
+                                <a href="#">ลงทะเบียนคอร์สนี้</a>
                             </div>
                         </div>
                     </div>
@@ -463,12 +463,12 @@
                         </div>
                         <div class="flex__course__detail__button">
                             <div class="course__detail__button">
-                               <a href="#">course detail</a> 
+                               <a href="#">รายละเอียดคอร์ส</a> 
                             </div>
                         </div>
                         <div class="flex__register__button">
                             <div class="register__button">
-                                <a href="#">register</a>
+                                <a href="#">ลงทะเบียนคอร์สนี้</a>
                             </div>
                         </div>
                     </div>
@@ -487,12 +487,12 @@
                         </div>
                         <div class="flex__course__detail__button">
                             <div class="course__detail__button">
-                               <a href="#">course detail</a> 
+                               <a href="#">รายละเอียดคอร์ส</a> 
                             </div>
                         </div>
                         <div class="flex__register__button">
                             <div class="register__button">
-                                <a href="#">register</a>
+                                <a href="#">ลงทะเบียนคอร์สนี้</a>
                             </div>
                         </div>
                     </div>
@@ -520,12 +520,12 @@
                         </div>
                         <div class="flex__course__detail__button">
                             <div class="course__detail__button">
-                               <a href="#">course detail</a> 
+                               <a href="#">รายละเอียดคอร์ส</a> 
                             </div>
                         </div>
                         <div class="flex__register__button">
                             <div class="register__button">
-                                <a href="#">register</a>
+                                <a href="#">ลงทะเบียนคอร์สนี้</a>
                             </div>
                         </div>
                     </div>
@@ -545,12 +545,12 @@
                         </div>
                         <div class="flex__course__detail__button">
                             <div class="course__detail__button">
-                               <a href="#">course detail</a> 
+                               <a href="#">รายละเอียดคอร์ส</a> 
                             </div>
                         </div>
                         <div class="flex__register__button">
                             <div class="register__button">
-                                <a href="#">register</a>
+                                <a href="#">ลงทะเบียนคอร์สนี้</a>
                             </div>
                         </div>
                     </div>
@@ -570,12 +570,12 @@
                         </div>
                         <div class="flex__course__detail__button">
                             <div class="course__detail__button">
-                               <a href="#">course detail</a> 
+                               <a href="#">รายละเอียดคอร์ส</a> 
                             </div>
                         </div>
                         <div class="flex__register__button">
                             <div class="register__button">
-                                <a href="#">register</a>
+                                <a href="#">ลงทะเบียนคอร์สนี้</a>
                             </div>
                         </div>
                     </div>
