--- a/course_detail.html
+++ b/course_detail.html
@@ -97,7 +97,7 @@
                 <p class="title__main">หลักสูตร นักบินโดรน ขั้นพื้นฐาน (Drone for Beginners)</p>
                 <div class="d-flex flex-row">
                     <div>
-                        <img src="/images/teacher.png" alt="teacher" class="mt-3">
+                        <img src="/images/teacher.png" alt="teacher" class="mt-3 teacher__width">
                     </div>
                     <div class="teacher__name">
                         <p class="teacher__text" style="font-weight: 600;">ผู้สอน</p>
@@ -121,39 +121,48 @@
                     <p class="course__detail">ข้อมูลคอร์สเรียน</p>
                     <div class="container">
                         <div class="row p-2">
-                            <div class="col-md-6">
+                            <div class="col-8 col-sm-8 col-md-8">
                                 <img src="/images/duration.png" alt="duration">
                                 <span>&nbsp;&nbsp;Duration</span>
                             </div>
-                            <div class="col-md-6">
+                            <div class="col-4 col-sm-4 col-md-4">
                                 <p class="text__align">1 day</p>
                             </div>
                         </div>
                         <div class="row p-2">
-                            <div class="col-md-6">
+                            <div class="col-8 col-sm-8 col-md-8">
                                 <img src="/images/bell.png" alt="bell">
                                 <span>&nbsp;&nbsp;Lectures</span>
                             </div>
-                            <div class="col-md-6">
+                            <div class="col-4 col-sm-4 col-md-4">
                                 <p class="text__align">10</p>
                             </div>
                         </div>
                         <div class="row p-2">
-                            <div class="col-md-6">
+                            <div class="col-8 col-sm-8 col-md-8">
                                 <img src="/images/quiz.png" alt="quiz">
                                 <span>&nbsp;&nbsp;Quizzes</span>
                             </div>
-                            <div class="col-md-6">
+                            <div class="col-4 col-sm-4 col-md-4">
                                 <p class="text__align">3</p>
                             </div>
                         </div>
                         <div class="row p-2">
-                            <div class="col-md-8">
+                            <div class="col-8 col-sm-9 col-md-9">
                                 <img src="/images/like.png" alt="like">
                                 <span>&nbsp;&nbsp;Pass Percentage</span>
                             </div>
-                            <div class="col-md-4">
+                            <div class="col-4 col-sm-3 col-md-3">
                                 <p class="text__align">60</p>
+                            </div>
+                        </div>
+                        <div class="row p-2">
+                            <div class="col-8 col-sm-8 col-md-8">
+                                <img src="/images/user.png" alt="user">
+                                <span>&nbsp;Number of people enrolled</span>
+                            </div>
+                            <div class="col-4 col-sm-4 col-md-4">
+                                <p class="text__align">60/100</p>
                             </div>
                         </div>
                     </div>
@@ -236,8 +245,8 @@
             </div>
         </div>
     </div>
-    <p class="advantage">สิ่งที่จะได้รับจากคอร์สเรียนนี้</p>
     <div class="container advantage__margin__align">
+        <p class="advantage">สิ่งที่จะได้รับจากคอร์สเรียนนี้</p>
         <div class="row">
             <div class="col-sm-12 col-md-12 col-lg-6">
                 <div class="advantage__first">
