--- a/promo_document.html
+++ b/promo_document.html
@@ -107,51 +107,115 @@
         <p class="promo__document__text">เอกสารประชาสัมพันธ์</p>
     </div>
     <div class="drone__copter">
-        <div class="overlay__container__promo">
-            <div class="container container__block">
-                <div class="form-check">
-                    <input class="form-check-input" type="radio" name="document__radio" id="documentRadios1"
-                        value="เอกสารที่สามารถดาวน์โหลดไปใช้งานได้" data-download="/files/file.pdf">
-                    <label class="form-check-label" for="documentRadios1">
-                        เอกสารที่สามารถดาวน์โหลดไปใช้งานได้
-                    </label>
-                </div>
-                <div class="form-check">
-                    <input class="form-check-input" type="radio" name="document__radio" id="documentRadios2"
-                        value="ทำความรู้จักการบินโดรนเบื้องต้น" data-download="/files/file.pdf">
-                    <label class="form-check-label" for="documentRadios2">
-                        ทำความรู้จักการบินโดรนเบื้องต้น
-                    </label>
-                </div>
-                <div class="form-check">
-                    <input class="form-check-input" type="radio" name="document__radio" id="documentRadios3"
-                        value="เอกสารประกอบการเรียนหลักสูตรภาพถ่ายมุมสูง" data-download="/files/file.pdf">
-                    <label class="form-check-label" for="documentRadios3">
-                        เอกสารประกอบการเรียนหลักสูตรภาพถ่ายมุมสูง
-                    </label>
-                </div>
-                <div class="form-check">
-                    <input class="form-check-input" type="radio" name="document__radio" id="documentRadios4"
-                        value="Pre-Flight Check" data-download="/files/file.pdf">
-                    <label class="form-check-label" for="documentRadios4">
-                        Pre-Flight Check
-                    </label>
-                </div>
-                <div class="form-check">
-                    <input class="form-check-input" type="radio" name="document__radio" id="documentRadios5"
-                        value="Post-Flight Check" data-download="/files/file.pdf">
-                    <label class="form-check-label" for="documentRadios5">
-                        Post-Flight Check
-                    </label>
-                </div>
-                <div class="row">
-                    <div class="col-md-12">
-                        <div class="input-group input-group-lg mt-5">
-                            <input type="text" id="globalSearch" class="form-control search__input mb-5" placeholder="ค้นหา">
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-12 col-md-12 col-lg-12">
+                    <div class="row mt-5">
+                        <div class="col-sm-12 col-md-12 col-lg-3 article__align">
+                            <img src="/images/dog.jpg" alt="dog" width="100%" class="dog__img">
+                        </div>
+                        <div class="col-sm-12 col-md-12 col-lg-9 white__bg">
+                            <h4 class="title_file" data-search="เอกสารที่สามารถดาวน์โหลดไปใช้งานได้">เอกสารที่สามารถดาวน์โหลดไปใช้งานได้</h4>
+                            <p class="description">แมชชีนคูลเลอร์ แดนซ์จุ๊ยเสกสรรค์ ครูเสดเซอร์วิสซิมโฟนี่ ทัวร์นาเมนท์ฮาราคีรี เนอะสเตชันม้านั่งคอนเฟิร์ม บ๋อยสเตริโอออยล์สเตเดียมบร็อคโคลี โฮป มอลล์สามแยกวอร์รูม แฟรีเอ๋อเพาเวอร์วัจนะ ออกแบบรองรับบลอนด์ลอจิสติกส์เฝอ แพทยสภาวอลนัตเปราะบาง บาบูนมือถือ อาร์ติสต์ อาร์พีจีลอจิสติกส์ซากุระโรลออนครูเสด ซาดิสต์ แจ็กพอต</p>
+                            <div class="row">
+                                <div class="col-sm-12 col-md-12 col-lg-9">
+                                </div>
+                                <div class="col-sm-12 col-md-12 col-lg-3 d-flex justify-content-end download__button__align">
+                                    <button class="download__button"><a href="/files/file.pdf" download>ดาวน์โหลด</a></button>
+                                </div>
+                            </div>
                         </div>
                     </div>
-                    <div class="col-md-12 margin__bottom__align"></div>
                 </div>
+            </div>
+             <div class="row">
+                <div class="col-sm-12 col-md-12 col-lg-12">
+                    <div class="row mt-5">
+                        <div class="col-sm-12 col-md-12 col-lg-3 article__align">
+                            <img src="/images/dog.jpg" alt="dog" width="100%" class="dog__img">
+                        </div>
+                        <div class="col-sm-12 col-md-12 col-lg-9 white__bg">
+                            <h4 class="title_file" data-search="ทำความรู้จักการบินโดรนเบื้องต้น">ทำความรู้จักการบินโดรนเบื้องต้น</h4>
+                            <p class="description">แมชชีนคูลเลอร์ แดนซ์จุ๊ยเสกสรรค์ ครูเสดเซอร์วิสซิมโฟนี่ ทัวร์นาเมนท์ฮาราคีรี เนอะสเตชันม้านั่งคอนเฟิร์ม บ๋อยสเตริโอออยล์สเตเดียมบร็อคโคลี โฮป มอลล์สามแยกวอร์รูม แฟรีเอ๋อเพาเวอร์วัจนะ ออกแบบรองรับบลอนด์ลอจิสติกส์เฝอ แพทยสภาวอลนัตเปราะบาง บาบูนมือถือ อาร์ติสต์ อาร์พีจีลอจิสติกส์ซากุระโรลออนครูเสด ซาดิสต์ แจ็กพอต</p>
+                            <div class="row">
+                                <div class="col-sm-12 col-md-12 col-lg-9">
+                                </div>
+                                <div class="col-sm-12 col-md-12 col-lg-3 d-flex justify-content-end download__button__align">
+                                    <button class="download__button"><a href="/files/file.pdf" download>ดาวน์โหลด</a></button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-12 col-md-12 col-lg-12">
+                    <div class="row mt-5">
+                        <div class="col-sm-12 col-md-12 col-lg-3 article__align">
+                            <img src="/images/dog.jpg" alt="dog" width="100%" class="dog__img">
+                        </div>
+                        <div class="col-sm-12 col-md-12 col-lg-9 white__bg">
+                            <h4 class="title_file" data-search="เอกสารประกอบการเรียนหลักสูตรภาพถ่ายมุมสูง">เอกสารประกอบการเรียนหลักสูตรภาพถ่ายมุมสูง</h4>
+                            <p class="description">แมชชีนคูลเลอร์ แดนซ์จุ๊ยเสกสรรค์ ครูเสดเซอร์วิสซิมโฟนี่ ทัวร์นาเมนท์ฮาราคีรี เนอะสเตชันม้านั่งคอนเฟิร์ม บ๋อยสเตริโอออยล์สเตเดียมบร็อคโคลี โฮป มอลล์สามแยกวอร์รูม แฟรีเอ๋อเพาเวอร์วัจนะ ออกแบบรองรับบลอนด์ลอจิสติกส์เฝอ แพทยสภาวอลนัตเปราะบาง บาบูนมือถือ อาร์ติสต์ อาร์พีจีลอจิสติกส์ซากุระโรลออนครูเสด ซาดิสต์ แจ็กพอต</p>
+                            <div class="row">
+                                <div class="col-sm-12 col-md-12 col-lg-9">
+                                </div>
+                                <div class="col-sm-12 col-md-12 col-lg-3 d-flex justify-content-end download__button__align">
+                                    <button class="download__button"><a href="/files/file.pdf" download>ดาวน์โหลด</a></button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-12 col-md-12 col-lg-12">
+                    <div class="row mt-5">
+                        <div class="col-sm-12 col-md-12 col-lg-3 article__align">
+                            <img src="/images/dog.jpg" alt="dog" width="100%" class="dog__img">
+                        </div>
+                        <div class="col-sm-12 col-md-12 col-lg-9 white__bg">
+                            <h4 class="title_file"  data-search="Pre-Flight Check">Pre-Flight Check</h4>
+                            <p class="description">แมชชีนคูลเลอร์ แดนซ์จุ๊ยเสกสรรค์ ครูเสดเซอร์วิสซิมโฟนี่ ทัวร์นาเมนท์ฮาราคีรี เนอะสเตชันม้านั่งคอนเฟิร์ม บ๋อยสเตริโอออยล์สเตเดียมบร็อคโคลี โฮป มอลล์สามแยกวอร์รูม แฟรีเอ๋อเพาเวอร์วัจนะ ออกแบบรองรับบลอนด์ลอจิสติกส์เฝอ แพทยสภาวอลนัตเปราะบาง บาบูนมือถือ อาร์ติสต์ อาร์พีจีลอจิสติกส์ซากุระโรลออนครูเสด ซาดิสต์ แจ็กพอต</p>
+                            <div class="row">
+                                <div class="col-sm-12 col-md-12 col-lg-9">
+                                </div>
+                                <div class="col-sm-12 col-md-12 col-lg-3 d-flex justify-content-end download__button__align">
+                                    <button class="download__button"><a href="/files/file.pdf" download>ดาวน์โหลด</a></button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-12 col-md-12 col-lg-12">
+                    <div class="row mt-5">
+                        <div class="col-sm-12 col-md-12 col-lg-3 article__align">
+                            <img src="/images/dog.jpg" alt="dog" width="100%" class="dog__img">
+                        </div>
+                        <div class="col-sm-12 col-md-12 col-lg-9 white__bg">
+                            <h4 class="title_file" data-search="Post-Flight Check">Post-Flight Check</h4>
+                            <p class="description">แมชชีนคูลเลอร์ แดนซ์จุ๊ยเสกสรรค์ ครูเสดเซอร์วิสซิมโฟนี่ ทัวร์นาเมนท์ฮาราคีรี เนอะสเตชันม้านั่งคอนเฟิร์ม บ๋อยสเตริโอออยล์สเตเดียมบร็อคโคลี โฮป มอลล์สามแยกวอร์รูม แฟรีเอ๋อเพาเวอร์วัจนะ ออกแบบรองรับบลอนด์ลอจิสติกส์เฝอ แพทยสภาวอลนัตเปราะบาง บาบูนมือถือ อาร์ติสต์ อาร์พีจีลอจิสติกส์ซากุระโรลออนครูเสด ซาดิสต์ แจ็กพอต</p>
+                            <div class="row">
+                                <div class="col-sm-12 col-md-12 col-lg-9">
+                                </div>
+                                <div class="col-sm-12 col-md-12 col-lg-3 d-flex justify-content-end download__button__align">
+                                    <button class="download__button"><a href="/files/file.pdf" download>ดาวน์โหลด</a></button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="input-group input-group-lg mt-5">
+                        <input type="text" id="globalSearch" class="form-control search__input mb-5"
+                            placeholder="ค้นหา">
+                    </div>
+                </div>
+                <div class="col-md-12 margin__bottom__align"></div>
             </div>
         </div>
     </div>
