--- a/knowledge_sharing.html
+++ b/knowledge_sharing.html
@@ -17,80 +17,88 @@
 <body>
   <header>
     <div class="container-custom">
-        <input type="checkbox" name="" id="check">
-        
-        <div class="logo-container">
-            <img src="/images/PDRC-logo.svg" alt="logo" width="40">
-        </div>
+      <input type="checkbox" name="" id="check">
 
-        <div class="nav-btn">
-            <div class="nav-links">
+      <div class="logo-container">
+        <img src="/images/PDRC-logo.svg" alt="logo" width="40">
+      </div>
+
+      <div class="nav-btn">
+        <div class="nav-links">
+          <ul>
+            <li class="nav-link" style="--i: .6s">
+              <a href="index.html">Home</a>
+            </li>
+            <li class="nav-link" style="--i: .85s">
+              <a href="#">Course</a>
+              <div class="dropdown">
                 <ul>
-                    <li class="nav-link" style="--i: .6s">
-                        <a href="index.html">Home</a>
-                    </li>
-                    <li class="nav-link" style="--i: .85s">
-                        <a href="#">Course</a>
-                        <div class="dropdown">
-                            <ul>
-                                <li class="dropdown-link">
-                                   <a href="course.html"> <img src="/images/reactangle.png" alt="rectangle" width="10" class="rectangle__image"> กลุ่ม ผู้เริ่มต้น (Beginner)</a>
-                                </li>
-                                <li class="dropdown-link">
-                                    <a href="#professional"> <img src="/images/reactangle.png" alt="rectangle" width="10" class="rectangle__image"> กลุ่ม นักบินโดรน เพื่องานถ่ายภาพและวิดีโอ ระดับมืออาชีพ (Professional)</a>
-                                </li>
-                                <li class="dropdown-link">
-                                    <a href="#specialist"><img src="/images/reactangle.png" alt="rectangle" width="10" class="rectangle__image"> กลุ่ม นักบินโดรน วิชาชีพเฉพาะทาง (Specialist)</a>
-                                </li>
-                                <li class="dropdown-link">
-                                    <a href="#license"><img src="/images/reactangle.png" alt="rectangle" width="10" class="rectangle__image"> กลุ่ม นักบินโดรน รับรองใบอนุญาตตามกฎหมาย (License)</a>
-                                </li>
-                                <li class="dropdown-link">
-                                    <a href="#cert"><img src="/images/reactangle.png" alt="rectangle" width="10" class="rectangle__image"> กลุ่ม ผู้ตรวจสอบ (Certificate)</a>
-                                </li>
-                            </ul>
-                        </div>
-                    </li>
-                    <li class="nav-link" style="--i: 1.1s">
-                        <a href="#">Activities</a>
-                    </li>
-                    <li class="nav-link" style="--i: 1.35s">
-                        <a href="#" class="active">Knowledge Sharing</a>
-                        <div class="dropdown-2">
-                            <ul>
-                                <li class="dropdown-link">
-                                    <a href="knowledge_sharing.html" class="active"><img src="/images/reactangle.png" alt="rectangle" width="10" class="rectangle__image"> บทความ</a>
-                                </li>
-                                <li class="dropdown-link">
-                                    <a href="promo_document.html" id="promo-docs-link"><img src="/images/reactangle.png" alt="rectangle" width="10" class="rectangle__image">เอกสารประชาสัมพันธ์ </a>
-                                </li>
-                            </ul>
-                        </div>
-                    </li>
-                    <li class="nav-link" style="--i: 1.35s">
-                        <a href="about.html">About Us</a>
-                    </li>
-                    <li class="nav-link" style="--i: 1.35s">
-                        <a href="contact.html">Contact Us</a>
-                    </li>
-                    <li class="nav-link" style="--i: 1.35s">
-                        <a href="faq.html">FAQ</a>
-                    </li>
+                  <li class="dropdown-link">
+                    <a href="course.html"> <img src="/images/reactangle.png" alt="rectangle" width="10"
+                        class="rectangle__image"> กลุ่ม ผู้เริ่มต้น (Beginner)</a>
+                  </li>
+                  <li class="dropdown-link">
+                    <a href="#professional"> <img src="/images/reactangle.png" alt="rectangle" width="10"
+                        class="rectangle__image"> กลุ่ม นักบินโดรน เพื่องานถ่ายภาพและวิดีโอ ระดับมืออาชีพ
+                      (Professional)</a>
+                  </li>
+                  <li class="dropdown-link">
+                    <a href="#specialist"><img src="/images/reactangle.png" alt="rectangle" width="10"
+                        class="rectangle__image"> กลุ่ม นักบินโดรน วิชาชีพเฉพาะทาง (Specialist)</a>
+                  </li>
+                  <li class="dropdown-link">
+                    <a href="#license"><img src="/images/reactangle.png" alt="rectangle" width="10"
+                        class="rectangle__image"> กลุ่ม นักบินโดรน รับรองใบอนุญาตตามกฎหมาย (License)</a>
+                  </li>
+                  <li class="dropdown-link">
+                    <a href="#cert"><img src="/images/reactangle.png" alt="rectangle" width="10"
+                        class="rectangle__image"> กลุ่ม ผู้ตรวจสอบ (Certificate)</a>
+                  </li>
                 </ul>
-            </div>
-
-            <div class="log-sign" style="--i: 1.8s">
-                <a href="#" class="login__button">Log in</a>
-                <a href="#" class="signup__button">Register</a>
-            </div>
+              </div>
+            </li>
+            <li class="nav-link" style="--i: 1.1s">
+              <a href="#">Activities</a>
+            </li>
+            <li class="nav-link" style="--i: 1.35s">
+              <a href="#" class="active">Knowledge Sharing</a>
+              <div class="dropdown-2">
+                <ul>
+                  <li class="dropdown-link">
+                    <a href="knowledge_sharing.html" class="active"><img src="/images/reactangle.png" alt="rectangle"
+                        width="10" class="rectangle__image"> บทความ</a>
+                  </li>
+                  <li class="dropdown-link">
+                    <a href="promo_document.html" id="promo-docs-link"><img src="/images/reactangle.png" alt="rectangle"
+                        width="10" class="rectangle__image">เอกสารประชาสัมพันธ์ </a>
+                  </li>
+                </ul>
+              </div>
+            </li>
+            <li class="nav-link" style="--i: 1.35s">
+              <a href="about.html">About Us</a>
+            </li>
+            <li class="nav-link" style="--i: 1.35s">
+              <a href="contact.html">Contact Us</a>
+            </li>
+            <li class="nav-link" style="--i: 1.35s">
+              <a href="faq.html">FAQ</a>
+            </li>
+          </ul>
         </div>
 
-        <div class="hamburger-menu-container">
-            <div class="hamburger-menu">
-                <div></div>
-            </div>
+        <div class="log-sign" style="--i: 1.8s">
+          <a href="#" class="login__button">Log in</a>
+          <a href="#" class="signup__button">Register</a>
         </div>
-    </div>  
+      </div>
+
+      <div class="hamburger-menu-container">
+        <div class="hamburger-menu">
+          <div></div>
+        </div>
+      </div>
+    </div>
   </header>
 
   <div>
@@ -202,6 +210,36 @@
       </div>
     </div>
     </div>
+  </article>
+  <article id="video">
+    <div class="container">
+      <p class="video__text">Video sharing from Youtube</p>
+      <hr>
+      <div class="row">
+        <div class="col-6 col-md-6 col-md-6">
+          <p class="text-start playlist__text">My Playlist</p>
+        </div>
+
+      </div>
+      <div class="row " id="video-container">
+        <div class="col-12 col-md-12 col-lg-3 mb-5">
+          <a href="playlist_drone_mapping_talk.html">
+            <img src="/images/video_banner_1.png" alt="video_banner_1" width="100%" class="video__item">
+          </a>
+          <p class="video__title"><a href="playlist_drone_mapping_talk.html">Drone Mapping Talk</a></p>
+          <p class="video__desc">Playlist 6 Videos</p>
+          <p class="video__desc">Lorem ipsum dolor sit amet consectetur.</p>
+        </div>
+        <div class="col-12 col-md-12 col-lg-3 mb-5">
+          <a href="next-gen.html">
+            <img src="/images/video_banner_2.png" alt="video_banner_2" width="100%" class="video__item">
+            <p class="video__title"><a href="next-gen.html">Next-Gen Survay Tech</a></p>
+            <p class="video__desc">Playlist 6 Videos</p>
+            <p class="video__desc">Lorem ipsum dolor sit amet consectetur.</p>
+          </a>
+        </div>
+      </div>
+      <button id="add-video-btn" class="btn btn-primary mt-3" style="display:none;">Add Video</button>
   </article>
   <div class="footer__block">
     <p class="footer__text">Footer</p>
