--- a/knowledge_sharing.html
+++ b/knowledge_sharing.html
@@ -139,7 +139,7 @@
                   <div class="col-md-9"></div>
                   <div class="col-md-3 d-flex justify-content-end info__block">
                     <button class="info__button">
-                      <a href="#" class="info__text">รายละเอียด</a>
+                      <a href="article-1.html" class="info__text">รายละเอียด</a>
                     </button>
                   </div>
                 </div>
