activities success not responsive yet

--- a/article-1.html
+++ b/article-1.html
@@ -62,7 +62,7 @@
                             </div>
                         </li>
                         <li class="nav-link" style="--i: 1.1s">
-                            <a href="#">Activities</a>
+                            <a href="activities.html">Activities</a>
                         </li>
                         <li class="nav-link" style="--i: 1.35s">
                             <a href="#" class="active">Knowledge Sharing</a>
@@ -123,7 +123,7 @@
                 <div>
                     <a href="#" class="see__more">
                         <div class="facebook__box">
-                            <img src="/images/facebook.png" alt="facebook"> <span
+                            <img src="/images/facebook.png" alt="facebook" class="facebook__img"> <span
                                 class="see__more__text">อ่านเพิ่มเติมที่นี่</span>
                         </div>
                     </a>
