--- a/faq.html
+++ b/faq.html
@@ -50,7 +50,7 @@
                             </div>
                         </li>
                         <li class="nav-link" style="--i: 1.1s">
-                            <a href="#">Activities</a>
+                            <a href="activities.html">Activities</a>
                         </li>
                         <li class="nav-link" style="--i: 1.35s">
                             <a href="knowledge_sharing.html">Knowledge Sharing</a>
