--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                             </div>
                         </li>
                         <li class="nav-link" style="--i: 1.1s">
-                            <a href="#">Activities</a>
+                            <a href="activities.html">Activities</a>
                         </li>
                         <li class="nav-link" style="--i: 1.35s">
                             <a href="#">Knowledge Sharing</a>
