--- a/promo_document.html
+++ b/promo_document.html
@@ -60,7 +60,7 @@
                             </div>
                         </li>
                         <li class="nav-link" style="--i: 1.1s">
-                            <a href="#">Activities</a>
+                            <a href="activities.html">Activities</a>
                         </li>
                         <li class="nav-link" style="--i: 1.35s">
                             <a href="#" class="active">Knowledge Sharing</a>
