--- a/activities.html
+++ b/activities.html
@@ -7,6 +7,7 @@
     <script src="./bootstrap/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="./fontawesome/all.min.css" />
     <link href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/fonts/remixicon.css" rel="stylesheet" />
+    <link rel="stylesheet" href="/css/knowledge_sharing.css">
     <link rel="stylesheet" href="/css/activities.css" />
     <link rel="stylesheet" href="/css/style.css" />
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
@@ -134,7 +135,7 @@
                 <div class="col-12 col-md-12 col-lg-6">
                     <div class="row gutter">
                         <div class="col-12 col-md-12 col-lg-6 padding__align__image">
-                            <img src="/images/activities__image__2.png" alt="activities__image__1" width="100%" class="activities__image__1">
+                            <img src="/images/activities__image__2.png" alt="activities__image__1" width="100%" class="activities__image__2">
                         </div>
                         <div class="col-12 col-md-12 col-lg-6 white__bg__2">
                             <p class="red__title__activities__2">เปิดโลกนวัตกรรมใหม่กับเทคโนโลยีโดรน จังหวัดชลบุรี</p>
@@ -146,7 +147,7 @@
                 <div class="col-12 col-md-12 col-lg-6">
                     <div class="row gutter">
                         <div class="col-12 col-md-12 col-lg-6 padding__align__image">
-                            <img src="/images/activities__image__3.png" alt="activities__image__1" width="100%" class="activities__image__1">
+                            <img src="/images/activities__image__3.png" alt="activities__image__1" width="100%" class="activities__image__2">
                         </div>
                         <div class="col-12 col-md-12 col-lg-6 white__bg__2">
                             <p class="red__title__activities__2">THAILAND DRONE SYMPOSIUM
@@ -161,7 +162,7 @@
                 <div class="col-12 col-md-12 col-lg-6">
                     <div class="row gutter">
                         <div class="col-12 col-md-12 col-lg-6 padding__align__image">
-                            <img src="/images/activities__image__4.png" alt="activities__image__1" width="100%" class="activities__image__1">
+                            <img src="/images/activities__image__4.png" alt="activities__image__1" width="100%" class="activities__image__2">
                         </div>
                         <div class="col-12 col-md-12 col-lg-6 white__bg__2">
                             <p class="red__title__activities__2">ทีมงาน #DroneProworks ร่วมงานวันเด็กแห่งชาติ</p>
@@ -173,11 +174,10 @@
                 <div class="col-12 col-md-12 col-lg-6">
                     <div class="row gutter">
                         <div class="col-12 col-md-12 col-lg-6 padding__align__image">
-                            <img src="/images/activities__image__5.png" alt="activities__image__1" width="100%" class="activities__image__1">
+                            <img src="/images/activities__image__5.png" alt="activities__image__1" width="100%" class="activities__image__2">
                         </div>
                         <div class="col-12 col-md-12 col-lg-6 white__bg__2">
                             <p class="red__title__activities__2">2023 – DRONE : POSSIBLEเปิดโลกนวัตกรรมใหม่กับเทคโนโลยีโดรน จังหวัดชลบุรี</p>
-                        </p>
                             <p class="content__activities__2">หลักสูตรนักบินอากาศยานไร้คนขับในระยะสายตาแบบปีกหมุน <strong>Remote Pilot Visual Line of Sight Certificate</strong></p>
                             <p class="date__2"><img src="/images/time.png" alt="time"> Sep 9,2024</p>
                         </div>
@@ -309,11 +309,19 @@
                     </div>
                 </div>
             </div>
+            <button class="button">
+                <a href="news.html">
+                    คลังข่าวกิจกรรมและประชาสัมพันธ์
+                </a>
+            </button>
         </div>
     </article>
     <article id="yearbook__page">
         <h1>yearbook</h1>
     </article>
+    <div class="footer__block">
+        <p class="footer__text">Footer</p>
+    </div>
     <script src="/js/activities.js"></script>
     <script src="/js/script.js"></script>
 </body>
