all page is done

--- a/faq.html
+++ b/faq.html
@@ -91,7 +91,7 @@
         </div>
     </header>
     <div>
-        <img src="/images/faq_banner.png" alt="faq_banner" width="100%">
+        <img src="/images/banner_Artboard02.png" alt="faq_banner" width="100%">
     </div>
     <div class="container__custom">
         <div class="row">
